plugins {
	id 'java'
	id 'application'
	//id 'org.javamodularity.moduleplugin' version '1.8.12'
	id 'org.openjfx.javafxplugin' version '0.0.13'
	id 'org.beryx.jlink' version '2.25.0'
}

group 'builderb0y'
version '1.0-SNAPSHOT'

repositories {
	mavenCentral()
}

ext {
	junitVersion = '5.10.2'
}

sourceCompatibility = '22'
targetCompatibility = '22'

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
	options.compilerArgs.addAll([ '--enable-preview', '-parameters' ])
}

application {
	mainClass = 'builderb0y.notgimp.NotGimp'
}

javafx {
	version = '21'
	modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.media' ]
}

dependencies {
	implementation('org.controlsfx:controlsfx:11.2.1')
	implementation('net.synedra:validatorfx:0.5.0') {
		exclude(group: 'org.openjfx')
	}
	implementation('com.google.code.gson:gson:2.11.0')

	testImplementation("org.junit.jupiter:junit-jupiter-api:${ junitVersion }")
	testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${ junitVersion }")

	implementation('org.jetbrains:annotations:25.0.0')
}

test {
	useJUnitPlatform()
}

jlink {
	imageZip = project.file("${ buildDir }/distributions/app-${ javafx.platform.classifier }.zip")
	options = [ '--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages' ]
	launcher {
		name = 'app'
	}
}

jlinkZip {
	group = 'distribution'
}